--- a/css/css/style.css
+++ b/css/css/style.css
@@ -11,7 +11,7 @@ body {
 
 
 
-header,header a {
+header {
 	height: 40px;
 	background-color: black;
 	color: white;
@@ -79,7 +79,7 @@ a:focus {
     position: relative;
     width: 190px;
     left: 660px;
-    top: 85px;
+    top: 60px;
     margin-bottom: -999;
 }
 
@@ -126,7 +126,7 @@ padding: 0px 1% 0px 1%;
 #adnotacja2 p {
 	text-align:right;
 	font-size: 10px;
-	margin-top: 225px;
+	margin-top: 405px;
 	color: rgb(140, 140, 140);
 }
 
@@ -147,4 +147,7 @@ padding: 0px 1% 0px 1%;
 	display:inline-block; 
 
 
+}
+.exp {
+	margin-left: 45%;
 }
